# west-end-financial

./: .dockerignore  .gitignore  Credit Data Original.xls  LICENSE.txt  README.md  app.py  data_packs.py  docker-compose.yaml  docker-compose.yml  models.py  pullrequest.txt  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/autopr/: pullrequest.txt
.github/workflows/: ci.yml  manage-pull-request.yml  wf-auto-pull-request.yaml  wf-autocd-containerapp-prod.yaml  wf-cd-acmebot-prod.yaml  wf-cd-containerapp-prod.yaml  wf-ci-acmebot-prod.yaml  wf-ci-containerapp-prod.yaml  wf-ci.yaml  wf-cicd-containerapp-prod.yaml  wf-destroy-containerapp-prod.yaml
Credit_Review_App/templates/: about_us.html
Notebooks/: playground.ipynb
app/: Dockerfile  __init__.py  main.py  py.typed
app/templates/: about_us.html  app_code.html  credit_approval_results.html  data_analysis.html  index.html  index_error.html  model_comparison.html  neural_network.html  neural_network_code.html  random_forest.html  random_forest_code.html
ci/: create-azure-certificate.sh  deploy-containerapp.sh  deploy-terraform.sh  update-containerapp.sh
ci/terraform/: locals.tf  (+3 more)
docs/: deployment.md
flask_app/: Procfile  app.py  data_conversions.py  models.py  models2.py  playground.ipynb
rawdata/: Credit Data Descriptions.xlsx  Credit Data Original.xls
src/: app.py  data_packs.py  models.py
templates/: about_us.html  credit_approval_results.html  data_analysis.html  index.html  index_error.html  neural_network.html  random_forest.html  random_forest_code.html
(+49 files in other folders)
