[tool.poetry]
name = "west-end-financial"
version = "0.1.0"
description = ""
authors = ["armckinney"]

[tool.poetry.dependencies]
python = "3.8.8"
flask = "2.1.0"
h5py = "^3.6.0"
matplotlib = "^3.5.1"
sklearn = "^0.0"
tensorflow = "^2.8.0"
scikit-learn = "^1.2.1"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
flake8 = "^4.0.1"
pep8-naming = "^0.12.1"
black = "^22.1.0"
mypy = "^0.931"
isort = "^5.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
