[tool.poetry]
name = "west-end-financial"
version = "0.1.0"
description = ""
authors = ["armckinney"]
packages = [
    { include="app" }
]

[tool.poetry.dependencies]
python = "3.8.8"
tensorflow = "^2.8.0"
uvicorn = "^0.20.0"
fastapi = "^0.92.0"
scikit-learn = "^1.2.1"
python-multipart = "^0.0.5"
pandas = "^1.5.3"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.0"
h5py = "^3.8.0"
pytest = "^7.2.1"
flake8 = "^6.0.0"
pep8-naming = "^0.13.3"
black = "^23.1.0"
mypy = "^1.0.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
